# sdf-ibc-proposal

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Cargo.toml  Dockerfile  Gemfile  Makefile  README.md  STRATEGY.md  _config.yml  architecture.md  docker-compose.yml  hermes-config.toml  index.md  roadmap.md  strategy.md  value.md
.githooks/: pre-commit
.github/workflows/: api-cd.yml  api-ci.yml  ci.yml  gateway-cd.yml  gateway-ci.yml  hermes-cd.yml  interstellar-ics.yml  interstellar.yml
_layouts/: default.html  home.html
assets/css/: style.css
assets/js/: site.js
ci/: Makefile  README.md  create-stellar-client.sh  docker-health.sh  entrypoint.sh  gateway-health.sh  hermes-config.toml  hermes-health.sh  upload-stellar-lc.sh
ci/flows/: build-api-image.sh  cosmos-only.sh  f0-bootstrap.sh  f1-create-cosmos-client.sh  f1-create-stellar-client.sh  hermes-keys.sh  upload-and-deploy-contracts.sh  upload-lc-wasm.sh
ci/tests/: health-check.sh  upload-wasm.sh
cli/: Cargo.toml  README.md
cli/src/: config.rs  main.rs  probe.rs  repo.rs  run.rs  shared.rs
cli/src/clients/: cosmos.rs  counterparty.rs  mod.rs  stellar.rs
cli/src/contracts/: build.rs  deploy.rs  deploy_all.rs  invoke.rs  mod.rs  upload.rs  wasm.rs
cli/src/cosmos/: config.rs  mod.rs
cli/src/hermes/: config.rs  container.rs  keys.rs
cli/src/ops/: bootstrap.rs  doctor.rs  install.rs  mod.rs  stack.rs  start.rs  status.rs
cli/src/osmosis/: README.md  config.rs  mod.rs
cli/src/stellar/: config.rs  mod.rs
cli/src/transfer/: mod.rs
contracts/cosmwasm/: README.md
contracts/light-clients/attestation/: README.md
contracts/light-clients/mock/: README.md
contracts/mock-light-client/: Cargo.toml
contracts/router/: README.md
contracts/router/src/: ics24_host.rs  lib.rs  packet_handler.rs  test.rs
contracts/soroban/: README.md
contracts/soroban-ibc/: Cargo.toml
contracts/soroban-ibc/src/: test.rs
contracts/soroban-mock-lc/: Cargo.toml
contracts/soroban-mock-lc/src/: lib.rs
contracts/soroban/ibc-router/: README.md
contracts/soroban/ibc-transfer/: Cargo.toml
contracts/stellar-ibc/: Cargo.toml
contracts/stellar-ibc/src/: errors.rs  lib.rs  test.rs
contracts/transfer-app/: Cargo.toml  README.md
contracts/transfer-app/src/: lib.rs  test.rs
crates/api/: Cargo.toml
crates/api/src/: config.rs  main.rs  runner.rs  state.rs
crates/cli/: Cargo.toml  README.md
crates/cli/src/: commands.rs  config.rs  main.rs  run.rs
crates/core/: Cargo.toml
crates/core/src/: api_client.rs  lib.rs  rpc.rs
crates/core/src/ibc/: client_state.rs  commitment.rs  consensus_state.rs  mod.rs  msg.rs  soroban.rs
crates/core/src/ibc/context/: client.rs  common.rs  execution.rs  mod.rs  storage.rs
crates/gateway/: Cargo.toml  build.rs
crates/gateway/proto/: stellar_gateway.proto
crates/gateway/src/: config.rs  event_decode.rs  lib.rs  main.rs  msg.rs  proto.rs  query.rs  rpc.rs  runner.rs  state.rs  state_tracker.rs
crates/ibc/: Cargo.toml
crates/ibc/src/: event.rs  lib.rs  smt.rs  trace.rs
crates/integration-tests/: Cargo.toml  build.rs
crates/integration-tests/src/: gateway_tests.rs  lib.rs  main.rs  pb.rs
crates/integration-tests/src/gateway/: mock.rs  msg.rs  query.rs
crates/light-client-wasm/: Cargo.toml
crates/light-client-wasm/src/: entrypoint.rs  error.rs  msg.rs  smt.rs  state.rs
crates/osmosis/: README.md
crates/osmosis/assets/: default-config.json  setup.sh
crates/osmosis/src/: config.rs  lifecycle.rs
crates/stellar-lc-wasm/: Cargo.toml
crates/stellar-lc-wasm/src/: entrypoint.rs  error.rs  lib.rs  merkle.rs  tests.rs  types.rs
docs/: APPLICATION.md  STRATEGY.md
gateway/src/: config.rs  main.rs  runner.rs
gateway/store/: Cargo.toml
gateway/store/src/: key.rs  lib.rs  soroban.rs  tx_builder.rs
integration-tests/interstellar/: query.rs  transfer.rs
interstellar/: Cargo.toml  README.md
interstellar/src/: config.rs  logger.rs  main.rs  run.rs
interstellar/src/accounts/: mod.rs
interstellar/src/balances/: mod.rs
interstellar/src/clients/: cosmos.rs  counterparty.rs  list.rs  mod.rs  stellar.rs
interstellar/src/contracts/: deploy_all.rs  wasm.rs
interstellar/src/cosmos/: tx.rs
interstellar/src/demo/: mod.rs
interstellar/src/logs/: mod.rs
interstellar/src/ops/: check.rs  (+3 more)
types/: Cargo.toml
types/src/: client_state.rs  consensus_state.rs  header.rs  lib.rs
verifier/: Cargo.toml
verifier/src/: lib.rs
(+73 files in other folders)
