[package]
name = "stellar-ibc-types"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "IBC light client types for the Stellar network (ClientState, ConsensusState, Header)"

[lib]
name = "stellar_ibc_types"
crate-type = ["rlib"]

[dependencies]
ibc-core = { workspace = true }
prost = { workspace = true }
derive_more = { workspace = true }
stellar-xdr = { workspace = true }
sha2 = { workspace = true }

[features]
default = ["std"]
std = ["ibc-core/std", "prost/std", "stellar-xdr/std", "sha2/std"]
