[package]
name = "stellar-ibc-verifier"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "SCP EXTERNALIZE header verification for the Stellar IBC light client"

[lib]
name = "stellar_ibc_verifier"

[dependencies]
stellar-ibc-types = { workspace = true }
ibc-core = { workspace = true }
stellar-xdr = { workspace = true }
ed25519-dalek = { workspace = true }
sha2 = { workspace = true }

[features]
default = ["std"]
std = ["stellar-ibc-types/std", "ibc-core/std", "stellar-xdr/std", "sha2/std"]
