[package]
name = "stellar-ibc-cli"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Caribic-style orchestrator CLI for the Stellar<->Cosmos IBC bridge"

[[bin]]
name = "stellaribc"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
