[package]
name = "stellar-integration-tests"
version = "0.1.0"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
description = "Manual integration tests against Stellar testnet"

[[bin]]
name = "integration-tests"
path = "src/main.rs"

[dependencies]
stellar-hermes-gateway = { workspace = true }
soroban-client = { workspace = true }
tokio = { workspace = true }
