[package]
name = "stellar-gateway-store"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
soroban-client.workspace = true
stellar-xdr.workspace = true
stellar-strkey.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
